fix horizontal scrolling(menu reason), edit contacts text to link, fix icons position and width on mobile

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -99,15 +99,18 @@
       line-height: 140%;
     }
 
-    &-text {
+    &-link {
+      display: inline-block;
       margin: 8px 0 24px;
       font-weight: 500;
       font-size: 16px;
       line-height: 140%;
+      text-decoration: none;
+      color: $main-text-color;
 
-      &--address {
-        text-decoration: none;
-        color: $main-text-color;
+      &:hover {
+        cursor: pointer;
+        color: #7e7e83;
       }
 
       &:last-child {
@@ -115,4 +118,16 @@
       }
     }
   }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: black;
+  -webkit-box-shadow: 0 0 0px 1000px #f8f8f8 inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
