--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,7 @@
 .icon {
   display: block;
   height: 24px;
-  width: 24px;
+  min-width: 24px;
   background-size: cover;
   background-position: center;
 
