--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,10 +1,19 @@
 .menu {
   box-sizing: border-box;
   height: 100vh;
+  width: 100%;
+  max-width: 100vw;
   background-color: #c2c2c2;
   font-weight: 600;
   text-transform: uppercase;
   overflow: auto;
+
+  &__content {
+    box-sizing: border-box;
+    width: 100%;
+
+    @include content-padding-inline;
+  }
 
   &__top {
     margin-bottom: 24px;
