--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,8 @@
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .page {
   font-family: Poppins, Arial, Helvetica, sans-serif;
   color: $main-text-color;
@@ -24,6 +29,10 @@
       opacity: 1;
       transform: translateX(0);
       pointer-events: all;
+    }
+
+    &:not(:target) {
+      display: none;
     }
   }
 
