--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -7,6 +7,8 @@
 
   &__icons {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 24px;
   }
 
